Fix styling bug due to overlapping class names for taglines

--- a/src/stylesheets/MoviePage.css
+++ b/src/stylesheets/MoviePage.css
@@ -67,7 +67,7 @@
   grid-column-start: 2;
 }
 
-.tagline {
+.tagline-movie {
   margin: -20px 0px 10px 0px;
   font-size: 16px;
   font-style: italic;
